Fix custom Maven dependency resolution without metadata